# g2_openclaw

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: android-development.agent.md  azure-bicep.agent.md  backend-python.agent.md  composition-patterns.agent.md  g2-development.agent.md  openclaw-development.agent.md  orchestrator.agent.md  react-best-practices.agent.md  react-native-skills.agent.md
copilot_bridge/: openclaw-mcp-config.json  openclaw-persona-snippet.md  package-lock.json  package.json  vitest.config.ts
copilot_bridge/scripts/: register-mcp.ts  validate-connection.ts
copilot_bridge/src/: client.ts  config.ts  hooks.ts  index.ts  mcp-openclaw.ts  mcp-server.ts  plugin.ts  types.ts
copilot_bridge/tests/: client.test.ts  hooks.test.ts  mcp-server.test.ts  plugin.test.ts
docs/: 01-architecture-overview.md  02-pc-gateway-design.md  03-g2-app-design.md  04-display-layouts.md  05-architecture-review.md  README.md
docs/copilot_sdk/: copilot-sdk-integration-plan-v2.md  copilot-sdk-integration-plan.md  copilot-sdk-integration-review.md
docs/decisions/: 001-thin-client-model.md  002-tap-to-toggle.md  003-no-setpageflip.md
docs/design/: architecture.md  azure-infrastructure.md  copilot-bridge.md  display-layouts.md  g2-app.md  protocol.md  switchable-inference-modes.md
docs/g2_dev_notes/: evenhub_cli.md
docs/guides/: development.md  getting-started.md
g2_app/: app.json  index.html  package-lock.json  package.json  vite.config.ts
gateway/: README.md  __main__.py  audio_buffer.py  cli.py  config.py  device_identity.py  openclaw_client.py  protocol.py  server.py  session_history.py  session_resolver.py  transcriber.py  tts.py
infra/: bicepconfig.json  console.py  main.bicep  main.json  main.py
openclaw_research/: 01_overview_and_installation.md  02_agent_architecture_and_context.md  03_agent_personas_and_identity.md  05_automation_scheduling_and_webhooks.md  06_memory_system.md  07_multi_agent_and_subagents.md
scripts/: bootstrap.sh  push-openclaw-config.sh
(+234 files in other folders)
